fixed style item on hover && added innerAlign
# carouselSettings.innerAlign
- 'left' | 'center' | 'right'; default 'left';
- if carouselSettings.imageFit === 'contain'
- added new control to carousel settings
- fullscreen carousel is centered

# fixed style item on hover
- the carousel appeared quite weird on some sites. well the slider-wrapper really needed its overflow: hidden.
- so now the carousel-slider itself has the box-shadow.

# fixed image doesn't show up ... forced a rerender after timeout. not the best way, but it works

--- a/src/sass/cgb_blocks_frontend/frontend.scss
+++ b/src/sass/cgb_blocks_frontend/frontend.scss
@@ -44,6 +44,15 @@
 }
 
 
+@mixin is-clickable() {
+     cursor: pointer;
+     transition: box-shadow 0.3s;
+     box-shadow: none;
+     &:hover {
+         box-shadow: 0px 8px 15px transparentize( black, 0.9 );
+     }
+}
+
 .cgb-block {
 
     &-grid-item,
@@ -75,12 +84,7 @@
         }
 
         &.is-clickable {
-             cursor: pointer;
-             transition: box-shadow 0.3s;
-             box-shadow: none;
-             &:hover {
-                 box-shadow: 0px 8px 15px transparentize( black, 0.9 );
-             }
+            @include is-clickable;
         }
 
         &.selected {
@@ -165,20 +169,16 @@
 .cgb-block {
     &-carousel {
 
+        .is-clickable {
+            @include is-clickable;
+        }
+
         .image-fit-cover {
             .slide {
                 height: 100%;
                 .cgb-block-carousel-item {
                     height: 100%;
                 }
-            }
-        }
-
-		// fix hover bow-shadow
-        .carousel {
-            overflow: visible;
-            .slider-wrapper {
-                overflow: visible;
             }
         }
 
@@ -229,6 +229,10 @@
 
 }
 
+.cgb-clearfix {
+    display: block;
+    clear: both;
+}
 
 .fullscreen {
     &-close {
